fixed bugs, refactored codes
* fixed how to use text dialog glitch in ConnectUsers module
* refactored existing code functionlaity for better readability
* made card content element padding ot be 0 to reduce extra spacing
* adjusted some stylings on existing card view

--- a/client-side/src/App.css
+++ b/client-side/src/App.css
@@ -115,7 +115,7 @@ p {
  } */
 
 .af-wrapper {
-  margin: 11px 0;
+  margin: 0 11px;
 }
 
 .af-wrapper .fc,
